kubernetes/traefik/auth-middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth-traefik
  namespace: traefik
spec:
  forwardAuth:
    address: http://authentik.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authRequestHeaders:
      - X-Forwarded-Uri
      - X-Forwarded-Method
      - X-Forwarded-Host
      - X-Forwarded-Proto
      - Cookie
    authResponseHeaders:
      - X-Forwarded-User
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - Authorization
