kubernetes/traefik/traefik.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: lan
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    app: traefik-ingress-controller
spec:
  selector:
    matchLabels:
      name: traefik-ingress-controller
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
        name: traefik-ingress-controller
      annotations:
        seb_scrape: "true"                     # Tells Prometheus to scrape metrics for Seb
        # prometheus.io/scrape: "true"         # Tells Prometheus to scrape metrics
        prometheus.io/port: "8082"             # Port where metrics are exposed
        prometheus.io/path: "/metrics"         # The path for the metrics endpoint
    spec:
      priorityClassName: traefik-priority
      serviceAccountName: traefik-ingress-controller
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jay-c
      containers:
      - name: traefik-ingress-controller
        image: traefik:v3.7.13
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        - name: prometheus
          containerPort: 8082
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                # Count occurrences of the error message in the log
                count=$(grep -o "configuration: invalid middleware type or middleware does not exist" /tmp/traefik.log | wc -l)
                if [ "$count" -ge 3 ]; then
                  exit 1 # Fail the probe if 3 or more errors are found
                fi
                # Count occurrences kubernetes api-server connection lost: "ended with: an error on the server"
                count=$(grep -o "ended with: an error on the server" /tmp/traefik.log | wc -l)
                if [ "$count" -ge 2 ]; then
                  exit 1 # Fail the probe if 1 or more errors are found
                fi
                exit 0 # Pass the probe if the error occurs less than 3 times
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 1
        args:
          - --api.dashboard=true
          - --api.insecure=true
          - --metrics=true
          - --metrics.prometheus=true
          - --metrics.prometheus.entryPoint=metrics
          - --metrics.prometheus.addRoutersLabels=true
          - --entrypoints.metrics.Address=:8082
          - --entrypoints.web.Address=:80
          - --entrypoints.websecure.Address=:443
          - --entrypoints.traefik.Address=:8080
          - --entrypoints.jellyfin.Address=:8096
          - --entrypoints.websecure.http.tls
          - --providers.kubernetesingress
          - --providers.kubernetesIngress.ingressClass=lan
          - --providers.kubernetesingress.ingressendpoint.ip=192.168.6.2
          - --providers.kubernetesIngress.allowEmptyServices=true
          - --providers.kubernetesCRD
          - --providers.kubernetesCRD.labelselector=expose!=online
          - --providers.kubernetesCRD.allowCrossNamespace=true
          - --providers.kubernetescrd.allowexternalnameservices=true
          - --experimental.plugins.sablier.modulename=github.com/sablierapp/sablier
          - --experimental.plugins.sablier.version=v1.8.5
          # - --log.filePath=/tmp/traefik.log
          # - --log.level=INFO
          # - --accesslog
          # - --serverstransport.insecureskipverify
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik-ingress-controller
  ports:
    - name: web
      protocol: TCP
      port: 80
    - name: websecure
      protocol: TCP
      port: 443
    - name: admin
      protocol: TCP
      port: 8080
    - name: jellyfin
      protocol: TCP
      port: 8096
    - name: prometheus
      port: 8082
      
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-loadbalancer-service
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.bas
spec:
  loadBalancerIP: 192.168.6.2
  type: LoadBalancer
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: 443
    - name: admin
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: jellyfin
      protocol: TCP
      port: 8096
      targetPort: 8096
  selector:
    app: traefik-ingress-controller
---
# Generic Redirect to https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-redirect-to-https
  namespace: traefik
spec:
  redirectScheme:
    scheme: https  

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-root-to-dashboard
  namespace: traefik
spec:
  redirectRegex:
    regex: ^/$
    replacement: /dashboard/
    permanent: true

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http-redirect
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.bas`) || Host(`www.traefik.bas`)
      middlewares:
        - name: traefik-http-redirect-to-https@kubernetescrd
      services:
        - name: api@internal # Service is required by Traefik but won't be used.
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: (Host(`traefik.bas`) || Host(`www.traefik.bas`)) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: traefik-auth-traefik
          namespace: traefik
    - kind: Rule
      match: (Host(`traefik.bas`) || Host(`www.traefik.bas`)) && PathPrefix(`/`)
      middlewares:
        - name: rewrite-root-to-dashboard
          namespace: traefik
        - name: traefik-auth-traefik
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-bas-tls
